<resources>
    <string name="app_name">kiipa</string>
    <string name="strCategoryButtonText">Stock Category</string>
    <string name="strStockButtonText">View Stock</string>
    <string name="strCustomerButtonText">Customers</string>
    <string name="strDailyTransactionButtonText">Daily Transactions</string>

    <string name="strToolbarDate">Fri 08 Mar, 2019 </string>
    <string name="strToolbarTime">04:40pm</string>

    <string name="categoryNameHint">Name</string>
    <string name="categoryDlgTitleAdd">Add category</string>
    <string name="categoryDlgTitleUpdate">Update category</string>
    <string name="update_string">Update</string>
    <string name="ok_string">OK</string>
    <string name="cancel_string">Cancel</string>
    <string name="categoryDlgTag">CATEGORYDLG</string>
    <string name="name_str">name</string>
    <string name="supply_price">Supply price</string>
    <string name="selling_price">Selling price</string>
    <string name="supply_qty">Supply qty</string>
    <string name="last_qty">Last qty</string>
    <string name="show_on_sale">Show on sale</string>
    <string name="add_measurements">Add Measurements</string>
    <string name="save">Save</string>
    <string name="str_amount">Amount:</string>
    <string name="str_item">Item</string>
    <string name="str_cost">Cost</string>
    <string name="str_price">Price</string>
    <string name="str_items">Items:</string>
    <string name="phone_str">Phone</string>

    <string name="str_qty">Qty</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_customer_credit_limit">Customers credit limit</string>
    <string name="desc_customer_credit_limit">Specify customer credit limit</string>
    <string name="key_customer_credit_limit">customer_credit_limit</string>

    <string name="title_currency_symbol">Currency Symbol</string>
    <string name="desc_currency_symbol">Input currency symbol</string>
    <string name="key_currency_symbol">currency_symbol</string>

    <string name="title_alert_on_low_stock">Alert on low stock</string>
    <string name="desc_alert_on_low_stock">Turn on to get notification on low stock</string>
    <string name="key_alert_on_low_stock">alert_on_low_stock</string>

    <string name="title_notify_on_expire_stock">Stock Expiry notification</string>
    <string name="desc_notify_on_expire_stock">Show notification on stock expiration</string>
    <string name="key_notify_on_expire_stock">notify_on_expire_stock</string>
    <string name="stock_expiration_days_number">stock_expiration_day_number</string>

    <string name="title_use_app_as_store_keeper">Switch to store keeper mode</string>
    <string name="desc_use_app_as_store_keeper">Control app to be use for store keeping</string>
    <string name="key_use_app_as_store_keeper">use_app_as_store_keeper</string>
    <string name="appwidget_text">Kiipa</string>
    <string name="add_widget">Add widget</string>

    <!--test unit id-->
    <string name="banner_ad_unit_id">ca-app-pub-8899251241880967/4283447175</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-8899251241880967/5279520995</string>
    <string name="admob_app_id">ca-app-pub-8899251241880967~6390735769</string>

    <string name="banner_ad_test_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="expiration_date">Expiration date</string>
    <string name="category">Category</string>
    <string name="measurement">Measurement</string>
    <string name="qty">Qty</string>
    <string name="stock">Stock:</string>
    <string name="tomato">Tomato</string>
    <string name="price">Price:</string>
    <string name="qty_label">Qty:</string>
    <string name="quantity_hint">Quantity</string>
    <string name="type">Type</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="new_label">New</string>
    <string name="cart">Cart</string>
    <string name="cart_checkout">Cart Checkout</string>
    <string name="stockimg">stockimg</string>
    <string name="current_transactions_list">Current Transactions List</string>
    <string name="no_transactions_yet">No Transactions yet</string>


</resources>

