<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp">

    <Button
        android:id="@+id/category_btn"
        android:layout_width="@dimen/dimenMainLayoutButtonWidth"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:text="@string/strCategoryButtonText"
        android:textSize="@dimen/dimenMainLayoutButtonTextSize"
        android:gravity="center_horizontal" />


    <Button
        android:id="@+id/stock_btn"
        android:layout_below="@id/category_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        
        android:text="@string/strStockButtonText"
        android:textSize="@dimen/dimenMainLayoutButtonTextSize"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/customer_btn"
        android:layout_below="@id/stock_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:text="@string/strCustomerButtonText"
        android:textSize="@dimen/dimenMainLayoutButtonTextSize"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/daily_transaction_btn"
        android:layout_below="@id/customer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:text="@string/strDailyTransactionButtonText"
        android:textSize="@dimen/dimenMainLayoutButtonTextSize"
        android:gravity="center_horizontal"/>

</RelativeLayout>