<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cart_iv"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_add_shopping_cart_black_24dp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="5dp"
        />

    <TextView
        android:id="@+id/cart_item_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/cart_iv"
        android:layout_toEndOf="@+id/cart_iv"
        android:text="@string/str_items"
        android:layout_marginTop="10dp"


        />

    <TextView
        android:id="@+id/cart_item_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/cart_item_label_tv"
        android:layout_toEndOf="@+id/cart_item_label_tv"
        android:text="3"
        android:layout_marginTop="10dp"

        />

    <TextView
        android:id="@+id/amount_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_amount"
        android:layout_toRightOf="@+id/cart_iv"
        android:layout_toEndOf="@+id/cart_iv"
        android:layout_below="@+id/cart_item_label_tv"/>

    <TextView
        android:id="@+id/amount_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/amount_label_tv"
        android:layout_toEndOf="@+id/amount_label_tv"
        android:layout_below="@+id/cart_item_tv"
        android:text="3000"/>

    <LinearLayout
        android:id="@+id/ll_divider1"
        android:layout_below="@+id/cart_iv"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="end"
        android:layout_marginTop="20dp" />

    <TableLayout
        android:id="@+id/cart_item_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_divider1"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:stretchColumns="*">

        <TableRow>
            <TextView
                android:text="@string/str_item"/>

            <TextView
                android:text="@string/str_cost"/>

            <TextView
                android:text="@string/str_price"/>

            <TextView
                android:text=""/>

        </TableRow>

    </TableLayout>


</RelativeLayout>
