<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <ImageView
        android:id="@+id/stock_iv"
        android:autofillHints="stockimage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_add_shopping_cart_black_24dp"/>


    <TextView
        android:id="@+id/stock_name_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/stock_iv"
        android:text="@string/stock"
        android:layout_marginLeft="@dimen/addToStockDlgTextLabelLeftMargin"
        />

    <TextView
        android:id="@+id/stock_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/stock_name_label_tv"
        android:text="@string/tomato"/>

    <TextView
        android:id="@+id/stock_price_label_tv"
        android:layout_toRightOf="@id/stock_iv"
        android:layout_below="@id/stock_name_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginLeft="@dimen/addToStockDlgTextLabelLeftMargin"/>

    <TextView
        android:id="@+id/stock_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/stock_price_label_tv"
        android:layout_toEndOf="@+id/stock_price_label_tv"
        android:layout_below="@id/stock_name_label_tv" />

    <TextView
        android:id="@+id/stock_qty_label_tv"
        android:layout_toRightOf="@id/stock_iv"
        android:layout_below="@id/stock_price_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty_label"
        android:layout_marginLeft="@dimen/addToStockDlgTextLabelLeftMargin"/>

    <TextView
        android:id="@+id/stock_qty_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/stock_qty_label_tv"
        android:layout_toEndOf="@+id/stock_qty_label_tv"
        android:layout_below="@id/stock_price_tv" />


    <EditText
        android:id="@+id/quantity_ed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/stock_iv"
        android:layout_toEndOf="@+id/stock_iv"
        android:layout_below="@+id/stock_price_label_tv"
        android:hint="@string/quantity_hint"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/measure_ll"
        android:layout_below="@id/stock_iv"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <RadioGroup
            android:id="@+id/stock_measurement_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



        </RadioGroup>


    </LinearLayout>




</RelativeLayout>
